tests/ui/typeck/unchecked_block.stderr
error: "unchecked" blocks cannot be nested.
  --> ROOT/tests/ui/typeck/unchecked_block.sol:LL:CC
   |
LL |             unchecked {}
   |             ^^^^^^^^^^^^
   |

error: aborting due to 1 previous error

